force-app/main/default/objects/Record_Health_Check_Rule__mdt/Record_Health_Check_Rule__mdt.object-meta.xml
<CustomObject>
    <description
  >Child configuration record defining one individual check inside a Record Health Check Set. Each record represents one named evaluation rule.</description>
    <label>Record Health Check Rule</label>
    <pluralLabel>Record Health Check Rules</pluralLabel>
</CustomObject>