force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/ActionLabel__c.field-meta.xml
<CustomField>
    <fullName>ActionLabel__c</fullName>
    <label>Action Label</label>
    <description
  >Optional user-facing text for the action link displayed when this Rule fails. Use a short verb phrase that describes the destination, such as "Review Account" or "Create support case". Action URL controls whether the link appears. When Action URL is set and this field is blank, the link is labeled "Fix this".</description>
    <type>Text</type>
    <length>80</length>
    <inlineHelpText
  >Optional text for the failure action link, such as "Review Account". Requires Action URL; blank uses "Fix this".</inlineHelpText>
</CustomField>