force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/ActionUrl__c.field-meta.xml
<CustomField>
    <fullName>ActionUrl__c</fullName>
    <label>Action URL</label>
    <description
  >Optional destination displayed as an action link when this Rule fails. Link to a Salesforce record, edit or create page, related list, report, Knowledge article, or HTTPS playbook. Current-record merge tokens are resolved before display and may traverse relationships, for example {!record.Id} or {!record.Owner.ManagerId}. Blank, unsafe, or overlong resolved URLs are hidden. Action Label is optional and defaults to "Fix this".</description>
    <type>LongTextArea</type>
    <length>32768</length>
    <inlineHelpText
  >Optional failure-action destination. Use a same-org path or HTTPS URL; {!record.FieldName} merge tokens are supported. Action Label is optional.</inlineHelpText>
</CustomField>