force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/ApexClass__c.field-meta.xml
<CustomField>
    <fullName>ApexClass__c</fullName>
    <label>Apex Class</label>
    <description
  >The API name of the Apex class to run for this check. Required when "Evaluation Type" is "Verify with Apex". The class must implement the RecordHealthCheckRule interface. Example: AccountApprovalHealthCheck.</description>
    <type>Text</type>
    <length>255</length>
        <inlineHelpText
  >Required for "Verify with Apex". The Apex class name to run, e.g. AccountApprovalHealthCheck. It must implement RecordHealthCheckRule.</inlineHelpText>
</CustomField>