force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/ApexSettingsJson__c.field-meta.xml
<CustomField>
    <fullName>ApexSettingsJson__c</fullName>
    <label>Apex Settings (JSON)</label>
    <description
  >Optional JSON settings passed to the Apex class. Must be valid JSON. Invalid JSON makes the check report that it can't run (reason INVALID_APEX_PARAMETERS).</description>
    <type>LongTextArea</type>
    <length>32768</length>
        <inlineHelpText
  >Optional. Valid JSON passed to your Apex class, e.g. {"threshold": 5}. Leave blank if the class needs no settings.</inlineHelpText>
</CustomField>