force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/ApplicabilityCountQuery__c.field-meta.xml
<CustomField>
    <fullName>ApplicabilityCountQuery__c</fullName>
    <label>Applies When (Count Query)</label>
    <description
  >A COUNT() SOQL query used only to decide whether this check applies - it is not part of the pass/fail logic. Required when "Applies To" is "When a count query matches". Its returned count is compared using "Count Must Be" and "Count Value"; the check runs only when that comparison is true, otherwise it is Skipped. Supports merge tokens such as {!Id}. Leave blank for any other "Applies To" choice.</description>
    <type>LongTextArea</type>
    <length>32768</length>
        <inlineHelpText
  >Required when "Applies To" = "When a count query matches". A COUNT() query, e.g. SELECT COUNT() FROM Contract WHERE AccountId = {!Id} AND Status = 'Active'. Compared using "Count Must Be" and "Count Value".</inlineHelpText>
</CustomField>