force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <description
  >Optional classification for the business outcome protected by this Rule, such as Completeness, Readiness, Risk, or Compliance. Use it to make metadata easier to find, report on, and reuse. The current card does not group checks by Category. This choice does not change evaluation, severity, order, or the result shown to users.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>COMPLETENESS</fullName><label
        >Completeness</label><default>false</default></value><value><fullName
        >CONSISTENCY</fullName><label>Consistency</label><default
        >false</default></value><value><fullName>TIMELINESS</fullName><label
        >Timeliness</label><default>false</default></value><value><fullName
        >ELIGIBILITY</fullName><label>Eligibility</label><default
        >false</default></value><value><fullName>READINESS</fullName><label
        >Readiness</label><default>false</default></value><value><fullName
        >RISK</fullName><label>Risk</label><default
        >false</default></value><value><fullName>COMPLIANCE</fullName><label
        >Compliance</label><default>false</default></value><value><fullName
        >RELATIONSHIP_COVERAGE</fullName><label
        >Relationship coverage</label><default
        >false</default></value></valueSetDefinition>
    </valueSet>
    <inlineHelpText
  >Optional business-outcome classification. The current card does not group checks by this value, and it does not affect the result.</inlineHelpText>
</CustomField>