force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/CheckMethod__c.field-meta.xml
<CustomField>
    <fullName>CheckMethod__c</fullName>
    <label>Check Type</label>
    <description
  >How this check decides pass or fail. Pick one, then fill in only the matching section of fields below.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Formula</fullName>
                <label>Check fields on this record</label>
            </value>
            <value>
                <fullName>Query</fullName>
                <label>Check records with a query</label>
            </value>
            <value>
                <fullName>CompareTwoQueries</fullName>
                <label>Compare two queries</label>
            </value>
            <value>
                <fullName>Apex</fullName>
                <label>Use custom Apex</label>
            </value>
        </valueSetDefinition>
    </valueSet>
        <inlineHelpText
  >Record formula = a true/false formula on the record. Single query = run one SOQL and compare the result. Compare two queries = compare two SOQL results. Use custom Apex = run your own Apex class.</inlineHelpText>
    <required>true</required>
</CustomField>