force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/CheckName__c.field-meta.xml
<CustomField>
    <fullName>CheckName__c</fullName>
    <label>Check Name (shown to users)</label>
    <description
  >The name end users see for this check in the panel row. This is the friendly title, not the DeveloperName.</description>
    <type>Text</type>
    <length>255</length>
        <inlineHelpText
  >The title users see for this check, e.g. "Billing City Present". Keep it short and plain-language.</inlineHelpText>
    <required>true</required>
</CustomField>