force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/CompareAgainst__c.field-meta.xml
<CustomField>
    <fullName>CompareAgainst__c</fullName>
    <label>Compare To Source</label>
    <description
  >For Single query checks, this says where the right-hand value comes from: a fixed value you type, a formula on the record, or a second query.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FixedValue</fullName>
                <label>A fixed value</label>
            </value>
            <value>
                <fullName>RecordFormula</fullName>
                <label>A formula on this record</label>
            </value>
            <value>
                <fullName>AnotherQuery</fullName>
                <label>A second query</label>
            </value>
        </valueSetDefinition>
    </valueSet>
        <inlineHelpText
  >A fixed value = type it in Expected Value or Threshold. A formula on the record = enter it in Expected Formula (on this record). A second query = enter it in Second Query.</inlineHelpText>
</CustomField>