force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/CompareToField__c.field-meta.xml
<CustomField>
    <fullName>CompareToField__c</fullName>
    <label>Second Query Field/Alias</label>
    <description
  >The API name of the field your Second Query returns. Needed when that query returns field values rather than a COUNT() aggregate.</description>
    <type>Text</type>
    <length>255</length>
        <inlineHelpText
  >Which column from the Second Query to read, e.g. Country_Code__c. Leave blank for COUNT() or aggregate queries.</inlineHelpText>
</CustomField>