force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/CompareToQuery__c.field-meta.xml
<CustomField>
    <fullName>CompareToQuery__c</fullName>
    <label>Second Query</label>
    <description
  >The second SOQL query. Used when Compare To Source is "A second query", or for a Compare two queries check. Supports merge tokens like {!Id} and {!FieldApiName}.</description>
    <type>LongTextArea</type>
    <length>32768</length>
        <inlineHelpText
  >The second SOQL query, for "A second query" comparisons or Compare two queries checks.</inlineHelpText>
</CustomField>