force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/ComparisonQuery__c.field-meta.xml
<CustomField>
    <fullName>ComparisonQuery__c</fullName>
    <label>Comparison Query</label>
    <description
  >The second SOQL query. Used when "Expected Value Comes From" is "Comparison query", for a "Compare two queries" check, or as the list source for the "List contains any" / "List contains none" operators. Supports merge tokens like {!Id} and {!FieldApiName}. Read a specific column from it with "Comparison Query Field".</description>
    <type>LongTextArea</type>
    <length>32768</length>
        <inlineHelpText
  >The second SOQL query - for "Comparison query" comparisons, "Compare two queries" checks, or the list for "List contains any"/"List contains none".</inlineHelpText>
</CustomField>