force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/CountOperator__c.field-meta.xml
<CustomField>
    <fullName>CountOperator__c</fullName>
    <label>Count Must Be</label>
    <description
  >Applicability gate only - not part of the pass/fail logic. How the count from Applies When Count Query Matches is compared to Count Value. The check runs only when this comparison is true. Required when "Applies To" is "Only records where a count query matches".</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equals</fullName>
                <label>Equal to</label>
            </value>
            <value>
                <fullName>NotEquals</fullName>
                <label>Not equal to</label>
            </value>
            <value>
                <fullName>GreaterThan</fullName>
                <label>Greater than</label>
            </value>
            <value>
                <fullName>GreaterThanOrEqual</fullName>
                <label>At least</label>
            </value>
            <value>
                <fullName>LessThan</fullName>
                <label>Less than</label>
            </value>
            <value>
                <fullName>LessThanOrEqual</fullName>
                <label>At most</label>
            </value>
        </valueSetDefinition>
    </valueSet>
        <inlineHelpText
  >Part of the applicability gate, not the main check. Example: "Greater than" with an Count Value of 0 runs the check only when at least one row matches.</inlineHelpText>
</CustomField>