force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/CountThreshold__c.field-meta.xml
<CustomField>
    <fullName>CountThreshold__c</fullName>
    <label>Count Value</label>
    <description
  >Applicability gate only - not part of the pass/fail logic. The number the count from Applies When Count Query Matches is compared against, using Count Must Be. The check runs only when that comparison is true; otherwise it is skipped. Required when "Applies To" is "Only records where a count query matches".</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
        <inlineHelpText
  >Part of the applicability gate, not the main check. Example: 0 with "Greater than" runs the check only when the count query returns at least one row.</inlineHelpText>
</CustomField>