force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/DataQuery__c.field-meta.xml
<CustomField>
    <fullName>DataQuery__c</fullName>
    <label>Primary Query (SOQL)</label>
    <description
  >The SOQL that fetches what you are checking. Use merge tokens like {!Id} or {!AccountNumber} to insert values from the current record. Leave blank only when using the List includes any of / List excludes all of operators (use Pass/Fail Formula instead).</description>
    <type>LongTextArea</type>
    <length>32768</length>
        <inlineHelpText
  >SOQL that returns the data to check. Insert record values with {!Id}, {!FieldApiName}, etc. Use COUNT() for "how many" checks.</inlineHelpText>
</CustomField>