force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/DisplayExpectedText__c.field-meta.xml
<CustomField>
    <fullName>DisplayExpectedText__c</fullName>
    <label>Display: Expected Text</label>
    <description
  >Optional and display only. Plain text (not a formula) that overrides the auto-generated Expected line on a multi-row ("Every record passes") query check. Supports the count tokens {!failCount} and {!totalCount} plus {!FieldName} record tokens. Example: every contact has an email.</description>
    <type>Text</type>
    <length>255</length>
    <inlineHelpText
  >Display only. Plain text (not a formula) for the "Expected" line on an "Every record passes" check. Tokens: {!failCount}, {!totalCount}, {!FieldName}. Example: every contact has an email.</inlineHelpText>
</CustomField>