force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/DisplayFoundText__c.field-meta.xml
<CustomField>
    <fullName>DisplayFoundText__c</fullName>
    <label>Display: Found Text</label>
    <description
  >Optional and display only. Plain text (not a formula) that overrides the auto-generated "N of M records did not pass" Found line on a multi-row ("Every record passes") query check. Supports the count tokens {!failCount} and {!totalCount} plus {!FieldName} record tokens. Example: {!failCount} of {!totalCount} contacts missing email.</description>
    <type>Text</type>
    <length>255</length>
    <inlineHelpText
  >Display only. Plain text (not a formula) for the "Found" line on an "Every record passes" check. Tokens: {!failCount}, {!totalCount}, {!FieldName}. Example: {!failCount} of {!totalCount} contacts missing email.</inlineHelpText>
</CustomField>