force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/DisplayValueFormat__c.field-meta.xml
<CustomField>
    <fullName>DisplayValueFormat__c</fullName>
    <label>Display: Value Format</label>
    <description
  >Display only. Controls how the Found and Expected values are written on the card - for example as currency, a number, or a percentage. Both sides use the same format, so the two values always read in the same units. It applies to list entries and to the operator phrase as well. It never changes whether the check passes or fails. Leave "Auto" unless you want a specific look, such as showing Annual Revenue as currency or an external Id as raw text. Choices: "Auto", "Number", "Currency", "Percent", "Checkbox", "Date", "Date/Time", "Text", "Raw".</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>AUTO</fullName><label>Auto</label><default
        >true</default></value><value><fullName>NUMBER</fullName><label
        >Number</label><default>false</default></value><value><fullName
        >CURRENCY</fullName><label>Currency</label><default
        >false</default></value><value><fullName>PERCENT</fullName><label
        >Percent</label><default>false</default></value><value><fullName
        >BOOLEAN</fullName><label>Checkbox</label><default
        >false</default></value><value><fullName>DATE</fullName><label
        >Date</label><default>false</default></value><value><fullName
        >DATETIME</fullName><label>Date/Time</label><default
        >false</default></value><value><fullName>TEXT</fullName><label
        >Text</label><default>false</default></value><value><fullName
        >RAW</fullName><label>Raw</label><default
        >false</default></value></valueSetDefinition>
    </valueSet>
    <inlineHelpText
  >Display only. Does not change pass or fail. Sets how Found and Expected are written, such as "Currency" for Annual Revenue, "Number" for an employee count, or "Raw" for an external Id. Leave "Auto" unless you need a specific look.</inlineHelpText>
</CustomField>