force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/EvaluationOrder__c.field-meta.xml
<CustomField>
    <fullName>EvaluationOrder__c</fullName>
    <label>Evaluation Order</label>
    <description
  >Controls the order in which checks run and appear on the card - lower numbers run and display first. Ties are broken alphabetically by the record's Name (DeveloperName). This order also governs prerequisites: a check named in another check's "Prerequisite Rule" must have a lower "Evaluation Order". Defaults to 100.</description>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
        <inlineHelpText
  >Lower number runs and shows first (default 100). Tip: use 10, 20, 30... so you can insert new checks between existing ones later. A prerequisite check must have a lower number than the check that requires it.</inlineHelpText>
<defaultValue>100</defaultValue></CustomField>