force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/EvaluationType__c.field-meta.xml
<CustomField>
    <fullName>EvaluationType__c</fullName>
    <label>Evaluation Type</label>
    <description
  >How this check decides pass or fail. Required - there is no default, so you must choose one, and your choice determines which other fields you fill in (complete only the matching section). "Verify with a formula" evaluates a true/false formula on the current record - fill in "Pass Condition". "Verify with a query" runs one SOQL query and compares its result - fill in "Source Query", "Comparison Operator", and "Expected Value Comes From". "Compare two queries" compares the results of two SOQL queries - fill in "Source Query" and "Comparison Query". "Verify with Apex" runs your own Apex class - fill in "Apex Class".</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>FORMULA</fullName><default
        >false</default></value><value><fullName>QUERY</fullName><default
        >false</default></value><value><fullName
        >COMPARE_TWO_QUERIES</fullName><default>false</default></value><value
      ><fullName>APEX</fullName><default
        >false</default></value></valueSetDefinition>
    </valueSet>
        <inlineHelpText
  >Required. Choose Formula for record fields, Query for related or aggregate data, Compare two queries for two result sets, or Apex for logic the other options cannot express.</inlineHelpText>
</CustomField>