force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/ExpectedSummaryOverride__c.field-meta.xml
<CustomField>
    <fullName>ExpectedSummaryOverride__c</fullName>
    <label>Advanced: Expected Summary (Text)</label>
    <description
  >Optional. Plain text (not a formula) that overrides the auto-generated Expected line on a multi-row (Every record must pass) query check. Supports the count tokens {!failCount} and {!totalCount} plus {!FieldName} record tokens. Example: every contact has an email.</description>
    <type>Text</type>
    <length>255</length>
    <inlineHelpText
  >Plain text (not a formula) for the Expected line on an Every-record-must-pass check. Tokens: {!failCount}, {!totalCount}, {!FieldName}. Example: every contact has an email.</inlineHelpText>
</CustomField>