force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/ExpectedValueFormula__c.field-meta.xml
<CustomField>
    <fullName>ExpectedValueFormula__c</fullName>
    <label>Advanced: Expected Display Value</label>
    <description
  >Optional. Used only when Check Type is Check fields on this record. A formula whose result is shown as the "Expected" value on the result row (the right side of a comparison — what the record should have had). Leave blank to keep the default behavior (the row shows a "Passes when" line echoing the Pass Condition (Formula) text). The Pass Condition (Formula) still decides pass/fail. Example: BLANKVALUE(Credit_Total__c, 0) - BLANKVALUE(Adjustment__c, 0).</description>
    <type>LongTextArea</type>
    <length>32768</length>
        <inlineHelpText
  >Optional. Formula shown as "Expected" on the row (e.g. BLANKVALUE(Credit_Total__c, 0)). Pass/fail is still decided by Pass Condition (Formula). Blank = the row shows a "Passes when" line with the formula text.</inlineHelpText>
</CustomField>