force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/FailureMessage__c.field-meta.xml
<CustomField>
    <fullName>FailureMessage__c</fullName>
    <label>Message When Failed</label>
    <description
  >The message users see when this check results in Fail. Insert values from the current record with merge tokens like {!Name} or {!BillingCity}. Press Enter to start a new line; each line is shown as a separate line on the card.</description>
    <type>LongTextArea</type>
    <length>32768</length>
        <inlineHelpText
  >Shown when the check fails. Use {!FieldApiName} to insert record values, e.g. "{!Name} is missing a Billing City". Press Enter for a new line.</inlineHelpText>
</CustomField>