force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/FieldToRead__c.field-meta.xml
<CustomField>
    <fullName>FieldToRead__c</fullName>
    <label>Primary Query Field/Alias</label>
    <description
  >The API name of the field your Primary Query (SOQL) returns. Needed when the query returns field values. Leave blank when the query uses COUNT() or another aggregate.</description>
    <type>Text</type>
    <length>255</length>
        <inlineHelpText
  >Which column from the Primary Query (SOQL) to read, e.g. MailingCity. Leave blank for COUNT() or aggregate queries.</inlineHelpText>
</CustomField>