force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/FixedValue__c.field-meta.xml
<CustomField>
    <fullName>FixedValue__c</fullName>
    <label>Expected Value</label>
    <description
  >The fixed value to compare against. Used only when Expected Value Comes From is "A fixed value". Can be text, a number, or a numeric threshold such as 0, 5, or 100000.</description>
    <type>Text</type>
    <length>255</length>
        <inlineHelpText
  >The value to compare against, e.g. 1, Approved, or San Francisco. For numeric checks, this can be the threshold. Only used when Expected Value Comes From is "A fixed value".</inlineHelpText>
</CustomField>