force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/FixInstructions__c.field-meta.xml
<CustomField>
    <fullName>FixInstructions__c</fullName>
    <label>Fix Instructions</label>
    <description
  >Optional user-facing guidance shown from a failed check's detail view. Keep it read-only and advisory; it must not trigger writes.</description>
    <type>LongTextArea</type>
    <length>32768</length>
    <inlineHelpText
  >Optional. Tell users how to resolve the failed check. This is guidance only; Record Health Check does not update records.</inlineHelpText>
</CustomField>