force-app/main/default/objects/Record_Health_Check_Rule__mdt/fields/FixMessage__c.field-meta.xml
<CustomField>
    <fullName>FixMessage__c</fullName>
    <label>Fix Message</label>
    <description
  >Optional user-facing guidance shown from a failed check's detail view, telling users how to resolve the issue. It is advisory and read-only - Record Health Check never updates records.</description>
    <type>LongTextArea</type>
    <length>32768</length>
    <inlineHelpText
  >Optional. Tell users how to fix the failed check. Guidance only - nothing is changed automatically.</inlineHelpText>
</CustomField>